--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
     "@tailwindcss/vite": "latest",
     "@tanstack/react-query": "^5.87.4",
     "@tanstack/react-router": "^1.131.41",
+    "blurhash": "^2.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^19.1.1",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-   "@eslint/js": "^9.35.0",
-   "@types/node": "^24.4.0",
+    "@eslint/js": "^9.35.0",
+    "@types/node": "^24.4.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
