--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "blurhash": "^2.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
@@ -36,7 +35,8 @@
     "react-infinite-scroll-component": "^6.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "use-local-storage-state": "^19.5.0"
+    "use-local-storage-state": "^19.5.0",
+    "viewer-pro": "^0.0.21"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
