--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ui:add": "pnpm dlx shadcn@latest add"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-language": "^1.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -27,6 +28,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
+    "mapbox-gl": "^3.15.0",
     "react": "^19.1.1",
     "react-activation": "^0.13.4",
     "react-blurhash": "^0.3.0",
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^24.4.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
