Refactor code style and improve consistency across files
- Updated CSS formatting for better readability in index.css.
- Standardized import statements in utils.ts, main.tsx, and various page components.
- Enhanced component structure and props in HomePage, LikesPage, SavedPage, and TrendingPage.
- Improved error handling and response validation in ApiService.
- Refined utility functions for better type safety and clarity.
- Adjusted Tailwind CSS configuration for consistent styling.
- Updated TypeScript configuration for stricter type checking.
- Cleaned up Vite configuration for improved readability and organization.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,16 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "strictNullChecks": true
   },
   "files": [],
   "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
+    }
   ]
 }
