--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "ultracite check",
+    "format": "ultracite fix",
     "preview": "vite preview",
     "ui:add": "pnpm dlx shadcn@latest add"
   },
@@ -43,21 +44,28 @@
     "viewer-pro": "^0.0.21"
   },
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
+    "@biomejs/biome": "^2.2.4",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^24.4.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.35.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "husky": "^9.1.7",
+    "lefthook": "^1.13.4",
+    "lint-staged": "^16.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.43.0",
+    "ultracite": "^5.4.3",
     "vite": "^7.1.5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
+      "npx ultracite fix",
+      "npx ultracite fix"
+    ]
   }
 }
