--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,9 +18,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
-    ,"baseUrl": "."
-    ,"paths": {
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
       "@/*": ["src/*"]
     }
   },
