--- a/package.json
+++ b/package.json
@@ -28,17 +28,20 @@
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-router": "^1.132.2",
     "blurhash": "^2.0.5",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.19",
     "lucide-react": "^0.544.0",
     "mapbox-gl": "^3.15.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-activation": "^0.13.4",
     "react-blurhash": "^0.3.0",
     "react-dom": "^19.1.1",
     "react-hotkeys-hook": "^5.1.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "use-local-storage-state": "^19.5.0",
