--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-language": "^1.0.1",
+    "@platejs/basic-nodes": "^51.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -21,6 +22,7 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toolbar": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "latest",
     "@tailwindcss/postcss": "^4.1.13",
@@ -31,18 +33,24 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.0",
     "framer-motion": "^12.23.19",
     "lucide-react": "^0.544.0",
     "mapbox-gl": "^3.15.0",
     "next-themes": "^0.4.6",
+    "platejs": "^51.0.0",
     "react": "^19.1.1",
     "react-activation": "^0.13.4",
     "react-blurhash": "^0.3.0",
     "react-dom": "^19.1.1",
     "react-hotkeys-hook": "^5.1.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "slate": "^0.118.1",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.117.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "use-local-storage-state": "^19.5.0",
     "viewer-pro": "^0.0.21"
