--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "slate-history": "^0.113.1",
     "slate-react": "^0.117.4",
     "sonner": "^2.0.7",
+    "spark-md5": "^3.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
@@ -64,6 +65,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/spark-md5": "^3.0.5",
     "@vitejs/plugin-react": "^5.0.3",
     "autoprefixer": "^10.4.21",
     "globals": "^16.4.0",
