--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@iceywu/utils": "^0.0.51",
     "@mapbox/mapbox-gl-language": "^1.0.1",
     "@platejs/basic-nodes": "^51.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
