--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tailwindcss/vite": "latest",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-router": "^1.132.2",
+    "@types/qrcode": "^1.5.6",
     "blurhash": "^2.0.5",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
@@ -44,6 +45,7 @@
     "mapbox-gl": "^3.15.0",
     "next-themes": "^0.4.6",
     "platejs": "^51.0.0",
+    "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-activation": "^0.13.4",
     "react-blurhash": "^0.3.0",
