--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-activation": "^0.13.4",
     "react-blurhash": "^0.3.0",
     "react-dom": "^19.1.1",
+    "react-easy-crop": "^5.5.3",
     "react-hotkeys-hook": "^5.1.0",
     "react-infinite-scroll-component": "^6.1.0",
     "slate": "^0.118.1",
